# moin-cli

./: .gitignore  =41.0.0  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.rust.md  install.sh  pyproject.toml
.github/workflows/: rust.yml
docs/: AUTHENTICATION.md  AUTHENTICATION_ANALYSIS.md  CLI_DESIGN.md  CONFIGURATION.md  IMPLEMENTATION_PLAN.md  README.md  WIKIRPC_V2.md
docs/developer/: architecture.md
docs/user-guide/: commands.md  configuration.md  getting-started.md
moin_cli/: __init__.py  config.toml  main.py  mcp_server.py  xmlrpc_client.py
moin_cli/config/: __init__.py  manager.py  models.py
src/: config.rs  main.rs  updater.rs  xmlrpc_client.rs
tests/: __init__.py  test_auth_command.py  test_config_functions.py  test_config_models.py  test_get_all_pages.py  test_get_command_cli.py  test_list_command.py  test_recent_functionality.py  test_regression_get_command.py  test_search_functionality.py
