[project]
name = "moin-cli"
version = "0.1.0"
description = "A Python CLI for MoinMoin wiki servers via XML-RPC with MCP server support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "toml>=0.10.0",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
]
authors = [
    {name = "toracle"}
]
license = {text = "MIT"}
keywords = ["moinmoin", "wiki", "xmlrpc", "cli", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/toracle/moin-cli"
Repository = "https://github.com/toracle/moin-cli"
Issues = "https://github.com/toracle/moin-cli/issues"

[project.scripts]
moin = "moin_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
